update program.md